vlib/v/parser/tests/for_in_mut_index_of_array.vv
fn main() {
	mut m := [1, 2, 3]
	for mut i, _ in m {
		println(i)
	}
}
